# CodeTogether

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_07_30_0203-17d39bf5a4ef_added_usermodel.py  2024_07_30_2028-e6e2ea4638fb_username_is_unique.py  2024_08_04_1634-c11769be0939_project_model.py  2024_08_15_1405-810fe4b569ef_position_model.py  2024_08_17_1114-80a348a4745f_application_model.py
scripts/: app.sh
src/: config.py  main.py  settings.py  typing_.py
src/auth/: current_user.py  security.py
src/core/: database.py
src/models/: __init__.py  position.py  project.py  user.py
src/models/associations/: __init__.py  application.py  user_position.py
src/models/utils/: mixins.py
src/repositories/: _base.py  application_repository.py  position_repository.py  project_repository.py  user_repository.py
src/routers/: __init__.py  api.py  depenencies.py
src/routers/v1/: __init__.py  application.py  auth.py  health.py  position.py  project.py  user.py
src/schemas/: __init__.py  application.py  auth.py  position.py  project.py  user.py
src/schemas/utils/: decorators.py  mixins.py
src/services/: application_service.py  auth_service.py  position_service.py  project_service.py  user_service.py
tests/: conftest.py  typing_.py
tests/api/: test_application.py  test_authentication.py  test_health.py  test_login.py  test_position.py  test_project.py  test_signup.py  test_user.py
tests/utils/: application.py  position.py  project.py  random_.py  user.py
(+1 files in other folders)
