[tool.poetry]
name = "codetogether"
version = "0.1.0"
description = ""
authors = ["Kirill Ankudinov <kirill.ankudinov.94@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
